[tool.poetry]
name = "capaci-kit-learn"
version = "0.1.0"
description = ""
authors = ["Rafael Capaci <rafaelcapacipereira@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
coverage = "^5.5"
autopep8 = "^1.5.5"
ipython = "^7.21.0"
ipdb = "^0.13.6"
rope = "^0.18.0"
scikit-learn = "^0.24.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
